--- a/src/main/webapp/css/core/width.css
+++ b/src/main/webapp/css/core/width.css
@@ -1,3 +1,12 @@
+/* Percentage based widths */
+.w-90 {
+    width: 90%;
+}
+
+.w-10 {
+    width: 10%;
+}
+
 .width-sm {
     width: 5em;
 }
